--- a/CVFiller/CVFiller/CVForm.resx
+++ b/CVFiller/CVFiller/CVForm.resx
@@ -883,4 +883,12 @@
         AwAAwAMAAMADAADAAwAAwAMAAMAHAADADwAA//8AAA==
 </value>
   </data>
+  <data name="richTextBox2.Text" xml:space="preserve">
+    <value>Professional .NET Full Stack Engineer with more than 5 years of experience in software
+development and sound knowledge of SOLID principles and OOP paradigm. Skilled
+programmer that is interested in high quality code development and best DevOps
+practices creating innovative software solutions. The background includes work with
+scrum and other agile frameworks, complex systems development, hosting and
+deployment automation.</value>
+  </data>
 </root>
