--- a/CVFiller/CVFiller/CVForm.resx
+++ b/CVFiller/CVFiller/CVForm.resx
@@ -884,7 +884,11 @@
 </value>
   </data>
   <data name="rtbProfile.Text" xml:space="preserve">
-    <value>Professional .NET Full Stack Engineer with more than 5 years of experience in software development and sound knowledge of SOLID principles and OOP paradigm. Skilled programmer that is interested in high quality code development and best DevOps practices creating innovative software solutions. The background includes work with scrum and other agile frameworks, complex systems development, hosting and deployment automation.  </value>
+    <value>Web development frameworks – ASP.NET, ASP.NET Core, Node.js
+Front-end technologies experience – JavaScript, CSS, HTML, jQuery, Bootstrap
+Back-end development – web services, windows services, REST API services – WCF , Web API
+
+</value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>46</value>
