--- a/CVFiller/CVFiller/CVForm.resx
+++ b/CVFiller/CVFiller/CVForm.resx
@@ -6975,6 +6975,9 @@
   <data name="lblPitch.Text" xml:space="preserve">
     <value>Professional .NET Full Stack Software Developer with more than 7 years of experience in software development and sound knowledge of SOLID principles and OOP paradigm. Skilled programmer that is interested in high quality code development and best DevOps practices creating innovative software solutions. The background includes work with scrum and other agile frameworks, complex systems development, hosting and deployment automation.</value>
   </data>
+  <metadata name="directorySearcher1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>142, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>46</value>
   </metadata>
