Add functionality to main form

--- a/CVFiller/CVFiller/MainForm.resx
+++ b/CVFiller/CVFiller/MainForm.resx
@@ -823,117 +823,9 @@
   <metadata name="directorySearcher1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>142, 17</value>
   </metadata>
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAPoAAABkCAYAAACvgC0OAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
-        cgAAEnIBXmVb4wAAGKpJREFUeF7tnXmYFNW5hxuQzWEbZmGG2ZkBZmEWBohRMEa9T7wuCYoLICoYBEUE
-        FRKV3LhhIkFQEJEtiiigIgq44PIQF/SKxgWNMWo0LrmKcQ0uaNy/+/2+ntPWtKe7q3uqt+nvj/fpmeqq
-        c+pUn/dsdaqOb8iQIaQoSvtGRVeUDEBFV5QMQEVXlAxARVeUDEBFV5QMQEVXlAxARVeUDEBFV5QMQEVX
-        lAxARVeUDMBz0evqhlB1jf/T9r2iKInHU9EHDx5CRaVNNGJYLRWXNtKgwfXW/dIBFFQVlQ1UWNxIeYVN
-        1Dd/KOUVNFG/oiYqq2ig6mr7cYqSingmeuXAeqqvH0L0lo/oI+ZfPmpsqJPttv1Tmcqqesplqc+dXkzP
-        bO1Oe57vQLTbR1+86KM3HulCiy/Kp6FNddS/pJFqa+1hKEoq4YnokLmhoUXyV3301d999B1/4n9sr0oj
-        2VGDjz2qkugNPv93mNd99O0r/jR9w59In6TzYx9df3mO1PBauyupTptFd0oOuSGEQaR40yfN4FSXHeeI
-        5vlFs/oT7fFL7UyLDXrbRx8925FKyxu525K+3RSl/dMm0cNJHpABsv/TRzXcxB04KDVlQPM7O28orV+S
-        Q/RvezpCgZofTXr052tq7OErSrKJWXQ3khtEdhYCg3OpJjskLy5rpB2bsojetZ9/JOj/fNKXR4vAFoei
-        JJuYRI9GcgO95he+amBDSo3GYwR94/Js6XPbztstaAmMHzMgrcYjlMwhatFjkdwA2dH3RTM3VWSXvnm/
-        ofT4pr3lToHtvN2A7snWNb2pqLTRGo+iJJOoRG+L5AaMYn/Nn+UDUkv2XjnNbZL9m5c5bdw9yS3Q5ruS
-        ergW3QvJDZAdA1gyWl3dPmT/GqLv8lEOtw5s4StKMnElupeSGyD7Zy/4ZCBscIrch26L7CI6Xx8VXUlF
-        IooOCb2W3ICm7qd/7SgzzBIhO7oLmPVm+84Qq+wi+jsqupKahBUdmT6/sEkGmjBibsvgbQWyY4ppYXF8
-        Z5hhnjqmrp49pVQKFts+hlhkx/V589HO1K9/kzVMRUkmEUUvKGLR99gzt1dA9t3PdJK48OSb7VzaAmrZ
-        359bKLfQwKRxFZ7LjhbPqnl5VFreYA1PUZJJRNFRQ3361w4ioy2DewVaDbuf6cjxDfVUdsx4WzI3Xx5K
-        CcTFsk8e763seJCnskpnxympScQ+OqauQohPuC+dCNnffbKTPBbaVmEgae/coXTNZblEH1ri8rBmp/d8
-        0i0oKdN76EpqElF0gL4z+tAf/4VlZxltmd0rMJ307cf3kvvRscoukrOc65f0JfrAHg+gT9ouOx5seerO
-        7tSzb7P1WEVJBVyJDiA7mvH/5r50ImR/c0dn6VtHK7tIydJtWtmH6H17+E7aIjvmxuN/zHHH97bjFCUV
-        cC06QN8Zo/AfPM2ys4zB0ngJHm/FSx4wPRXdB9v5BAPZULPecS1Lzs1pW7g2YpL9Sx/dsCiHemQ3q+RK
-        yhOV6ACy41bVu08kRvbXtnehbK4xI73JRSRkye9b2yump9CikR13B2ZOLpVCz7aPoqQaUYsO0JzO5Zp2
-        F/el4y77Wz565UGWPS+07Ebyhzf0kEkrtnDcEI3s+pSakk7EJDqA7OhDY5IIal6bOF4B2V/8UzfqY5G9
-        FpJzc/rPWyLfAnODW9kVJZ2IWXSAvnPf/GZ64+EEyL7LR8/fy7LnNgdkxydG15+9u7uMftuOiwWVXWlv
-        tEl0ANnRrH71oS5S89rE8QrI/uzd3URutCgg/Qvbusl22/5tQWVX2hNtFh2gZkWz+uX7u8ZfdrlvvTd1
-        6DqC/h7n+CD7lBPLIj4IoyipjieiAyP7i9tYvjjUsE4wQ8+8h872vVegO/Lxcx1llN2WZkVJFzwTHZg+
-        M/rS8ZYdj4XatnuFc9KOGRNQlHTFU9EBpMAouNcDZImkLTPzFCUV8Vx0YG55oS+dbrKr5Ep7JC6iAzOJ
-        xav724lAJVfaK3ETHUB2zD1/9NaslJddJVfaM3EVHRjZ2zo9NZ4kWnJcE9yyG1DZ4BrbeeE9e3gPHt5q
-        04qKBqrg7eFe4IEXftrisTHIsroOnmZEPNG+/gsr9WDRjOD0YEqxLe5QmHix5p3Z5gzPbIt2ZSCMMZlj
-        o00biDUdwJmWSOD3Qz5yxh2OuIsOjOwP3Ngz5WRPhuR4QcWMySU0+7RimnVqZObMKKJ996kJnB8mKeGB
-        mpH7VtPC8/vRskvzaMW8XFpxKcOf+P935xRSQ32drA4bnCGwyMS0iWX0q2n2+Jycc3oxHXl4lVwfEw4y
-        5yiO+6ar+sp5uX2xJwq3Y35RKU/91fO5mfTgekwcW+HqfMB5ZxTRf/10sIQ3+tAqOnd6Ef32zP4iAMLD
-        J/7HuU84eoBr2SE5rtlvZhYF4ohG9mK+rqdMKI86HYgD53jQAYMlLbZ9nSD8004qk8fG3V77hIgOjOyx
-        Pl0WD5LRXEcNvIDlpE85/rdd8rmPxh7pz7CopUvLGmjHbdwdwjvw3mLetLCL4e83LusjMwiNpJBj+sml
-        EqY1Lhu7ffTCtq6UV+CXHYWHTFb60EdfvtSB+uRFflQX1xcr9OAYcM/1veRV36gBIQf9JyjOcOzx0Zwz
-        iuVNRH+cn+u/Dt/4Amvf4RP/Y5ms+9f3dL16Dq7t8GG18giyicMUHpFADXv6pLKY0oE8UV1dT/SVZZ9Q
-        vMe84aPGxjpXhVHCRAdG9rvXJF/2ZPXJ0Wxd+rs8kVHO430XcKYd17KuGybvfPa3Dn6ZX2fwg3OG/gFY
-        2x2TivjzL/fgGQG/BIh/Odf4gfj5d7DG6UBeZf2Bj37NNSQyPs7h+fu6+dfT4/BReyLc4LQ6Qe1z57W9
-        5brjxSV3rfYvX4Xwfj2tRDKv2/OBiL/lWheiX3VJvv9acJpbiY5rwPEgzmhEbx5a54+Dz2f2qSWuRZd0
-        nBZbOnDthjVzvC1vQ5LC27a/E1x7vpaPbd7b1TTthIoOIDtuvUX7cggvSZbkAD9qIHPyD4bmXvPQ2rCM
-        4FpmyJA6KilvpJXzWNJ/8bF8PATe78c1Ungicxuy+jRLk/b9pzr5MwTXoDMml9IArs1bxc+ZEcc3NtRZ
-        4x3aVMv9xiGBTHXfDb1EGhEdk6J4uxQCHA62hZpYhKW39h9ZLfLJ9XcICEEglNRSEc7HMLy5VprYuB6p
-        JHqs6UDzOxAvS37e9GK5lrZjAFplj2/mFl3LDNHcgsgzNxMuOhDZOXO6fd2TlyRTctBKNM6MmEmIDBYJ
-        XDM8PCSlPQv2zhN7Uffew0KuXwepUYjI/lzzv/SnriJjcEGDpp/pEthAnJ8811H2N9I4RZdryt9tWJYt
-        TXrbuSCNbzzS+fv9Q4nu4nwMECH4WqaM6FGmA5/OeM+eUiJpC97XgOu/ZRW7w+nD8xgm3eFIiujA1Owb
-        lmZLZnTKGC9Q+r3+SJekSQ5smRMZMRwYfMMPLJkBfVzuf/8PN/nQt7PFYcALPZHRJUNwExvpDhYdYSJs
-        2/EAksq14/23XvdD0b99peXafuSjpiZ/7eQ8HgJMPbFMmqVYSVf2DSM6zgdNUWf6gzFxpLLo0aQj2ngR
-        7u3XtHSDuBB3s7Bn0kQHkM3XdYQsy2QyQTxBV6Gmpj6iIPEkOHN27DacHr4li7syva08tKEHN6HrpLl2
-        3JGV/r4fZ4ZZUyNnQsS16KKWuHb7RbCJjlFvbA8G/er99+MmNzIg74/Rcty+C4jOIr38YFd/QcIZ7kVu
-        NaAFYOJHYY44URigkP1wp/93Did61SD/evV3XdfLej0euKkH/eygQSIJzjFVRY8mHbZ4IXPw7wHwW6Gr
-        9iXyM19zvB4dv5PtnJwkTXR5aQXXMP/83y5xfwrNIEsbc+uhiZtVEMd2XvEGP5Yzc/p8+/hHwCGLjT0+
-        GahBRjr659+L7iYTBsdlEx2r2V5+fj9aekkeXTU3P8CVXEBctzBHxgOkH87nccCowXKvNyA6h4FCCsdL
-        F4FbG+OOGiAj0Igfo+pXXMjfIfNzIXvsaD5//M3pCiV6cWkTffkS/43zC74W4GN/OGgW29KHeFNB9GjS
-        ERzv9EllNPWEMlp+aW6r32TJxfzJv9Onz3WQ1hTyArbjOtjOyUlSRG8lOV8Im5Tx4rt/8AXipm+yZLeK
-        Tv6/rfB3PxpeKxlJRIlS9MWcOZwiBIuODCm1LDIotjlB0xAj99wsv3ZBjnQFEK5T9Ofu6UZdegz3387j
-        fXGNe+f6xx2qBjb4My9nyg93diJfB04r0sQZPZzoUmjglpnzOhi+89H4Mf5bjakuutt0BMc7+fhybpr7
-        x69a/R4G/CbcFXtrR2e584CWk+2cnCRc9GRKbkim7LbMGQlkBDTxRu5bE8gMGLDBfWlbHAY089Zyc1uE
-        bRm0sYku3yPz8afzOiEz7X62I53xy9JWI7tO0fGJV15j8ocUQtwCuPS8AurWcxhtW9/TX3txQXH4zwbJ
-        3QCJJ4zoyPDB6Q8GcuA8Uln0aNJhEx3zDNCKwv/OR7JlpJ0LENx9weAnfAo+FxsJFT0VJDckS/ZQmTMS
-        GJ3F7SQMaiEDb13du1V/OBiU8pDt3Sf3kszxAdeo+dyXCxYdo8MYA0BBsu7KvnJOuD7ITGhC+jqPkBF8
-        Z9jBouP/7Lxm/0o+aFLysdK3381/c9yP3pYlbw1GWt2IjozvjC8UqSy6TGRxmY7geFGI47YmZg9OPbFc
-        tn+L/Mp9ckwA8vl+LN2iULczbSRM9FSS3JAM2WMVHaDpLE8DolTn/jAG5FBLIiM7wUBOVvYwWr+Ea3Nk
-        PAb9O8QdLDoymGk+4lwwgQM1sPTLWdTl8/Jl8MfZPLSJjsk8ow+rkmPMWMjXfI2Rxvp6zsxckCRD9I3L
-        sqlz1nBp4kYiWLgpE8rl+tr2dYL0Ix24/y3p4JbNAaOq5Y6FbX8nyHfB8eJ6yGw53g6hf8phSTegpRB9
-        7eEuUmiHurVqIyGip6LkhkTL3hbRUevu8yNuvvNx0q/mDIVa9I5rvh/NxW2XbWt70lcYCDKZg+PCPfUf
-        3Hu2iFXAhQnmh6MgkVrkPR89vDFLWg/mlqRNdGzP4bTsvKu71Dy4triuWOQSBQ++T6joXOCgsPriRbwO
-        rIOsCBwOxI/jZIYanwcKq8+e70CfRDj28xd89P7TneTW5cEHDJbmthSSXBhHihfX6WwurCF1sOjOlgRa
-        VPjtkBZcO4C/sS24tRWKuIueypIbEik7MiceOpGpq5wpohEdIFOM+TnXnFzrisj44fHJ5x/AbMcMOs5M
-        aEaa0r9V/NxvR8YOFgu30PDAjISF/jtnwPee2oszn7/2gdgy153DwKcR3cy5lnn8HC9+7/4l38+YEwHR
-        7+Tzupf7oEZ0PHwiXZIQ5xOKUNcS0tFnLeeA1k+LHGH5j3/yEroxMl/d7bF8rVEgonYu5Otww2JuRWEA
-        DtfNtr8TLozO5VYA0iEFDKcf1wHXwyk6wO+HB5lQm8vvit+Y033IwYNcyR5X0dNBckOiZMePgqejMH0V
-        K9CEmk0WDmSCyoENtPIPeRLGrsf2ord2fM/bj3eip+/sTvN/UyCZHrfEAsc64n+JJUVNgt/JGT7ALTI0
-        6Z+6ozv9+fa96Tmuubff0kP2xSAf7hEjDHyiYDDHoan5B4738xc60C+Pr2iVYZFWnO8zW7vLmvUotBDH
-        5PHlMnc+3PnYCHUtsf3MySWy/XHu6rjBHI/zXzI3j3byOdr2C+aJO/amRzb2kEILcUP4yceX0T1retGT
-        /J3tGAPSjLTjfJFupN9sMwN1TnBdUBht+WNveXsTVvF9dXsXuR8f6cGWuImeTpIbEik7MlUskhvQjDaT
-        VzBhIhiEDZFst16c8YeTCnGg2W32xWCgCQ9xY5tTcgPixTmY++lOTFjYx2xDpjbb3UpuCHUtndvdYo5F
-        DWv7PhRGcgPSja6Sbd9gjNBId/A2G7j+KGjNvvh9kvb0WjpKbkjGAJ2ixBvPRU9nyQ0qu9Le8FR0vP21
-        HzclEyE5RpNt271CZVfaE56Kjj7ctnW95NaMTR6vwGjjY5vi/8JJIztGrVV2JZ1Juxodty4umtWffF1G
-        +CeEtLyVI15oza60B9Kqjw7JL2bJcQsDo494eEJlV5TIeC46iIfsTslNPCp7/KmurqaqqqoANTU1VFuL
-        V0wNlu8HDhwon9g2aNCgVsea753HB3/vJc54zHkpfmIWHTLbthu8lN0muUFljx+Q/JBDDqHZs2fTrFmz
-        6JxzzqGDDz6Ympub6ZRTTqHy8nI666yzqLKykoYPH04nn3xyK9kh26mnnirHgjlz5kSUva6uztW2YBCu
-        iQfMnDkzIDuOdxMuCiuz3U2c6URMokNivNgOEwts3xu8kD2c5AaVPT4MGDCAFi1aRFOmTKFjjjmGxo8f
-        T/vtt59IgM+SkhLatGmTfI4aNYqWLFkix5jjURCsW7eORo8eTccddxxNmDBBWgJlZWUBkUpLS+UTBYT5
-        u6KiQj6xb3FxsfwNCc33OBZh4G8D/t+4caPENXbsWDlfHI8CAAUR/sYn9nWGa8LCuTY0NATiQCGB1osJ
-        P92JSXTMxvnbfd3o4tn95Ska2z6GtsjuRnKDyu49kPbyyy8XGQoKCqh///4iCaS++uqrKS8vjzZs2CCi
-        jxw5UvZ1io6/58+fT3369JFjsR+kevDBB+WzsLCQtm/fLmGPGzeO1q9fT0uXLqVLLrlERISs27ZtoxUr
-        Vsg+OA7hINx77723lezYNm/evEBcKCwg+emnny6FzerVq6VFApERLsJCuEgDCogrrriCNm/eTAsWLJAC
-        C/Ei3aaWT3eiFh1CyUMDnNHx8MJ5ZxTHRfZoJDeo7N4CeebOnUu333473XzzzbR169ZWUkcSHdshzI03
-        3ki33norLV68WASeNGkSTZ06lQ499FC64IILKDc3V4Q/6aSTaOLEibRjxw4RbMyYMRJmv379RFwIiC4C
-        ugBHHHGEFDomrqKiItq5c6cUFhAWgqMgQYsjJydH2LJli2yD6CiAEC4KC6QNBUl2draksVevXnT00UfT
-        tGnT2k1fP2rRMQ/3qMOr5F42MjyeuPFa9lgkN6js3gFpIVpTU1OgNkZz1q3oppbNysqSfSETaknsf/31
-        19PKlSulyQ75USAceOCBdNhhh4ns2H7sscfSmWeeKTUzxK+vryfUvGvWrBGxg88V8iIenCcExSekh+Qo
-        TCA64kY3woSLfZAGfCKMhQsXyj5o/qPLkrGi4yGG1QtyW712yEvZ2yK5QWX3BmT85cuX0/777x/or+IT
-        /2M7pDK1vNnmFB3N5Pvvv1/kQW2+atUq+R61M/5Hkxr7QGr0/yHcZZddJvtBZPTpnQN4iGft2rU0Y8aM
-        wDYDwjXhm22m6Y5aftmyZXT++edLGM5wITjSYERHGNjnhBNOoOnTp2eu6Hjm98OnO0kGd2Z4L2T3QnJD
-        MmTHo4Z4OYTtfNIVZP7gQSn8b4SCIMHbnEBkbDeY7ZAdA2DmfwiFbWiamzDNYJrZB9tvueUW+UTLwGw3
-        2OLH8ShIsL/53hau+du5T3uRHEQlOl4IgCVh8MC8LcO3RXaRfDZL7mJ5GbdAdiwwuA4vA4iz7Jh7j7d+
-        4OUAtnNRIhNu8Mt8F0sti2NtBUMmEZXoWHP7Qq5xUXvZMjuISfYvfDT3V4WeSm6Qmj2HZb8yvrLLq504
-        fDerZiixAVnbUy2bSKISHS85wJtL8JodW2Y3RCM7HoTB8kJ4UYFtHy9IRM2ONE8aX9Hu760r6Ylr0fHe
-        L9w/x/vDbBk9GLey40GYRMhhZI9Hnx1pnTiuQq6PLW5FSTauRcfrfCeNrZCX+tsyuw23sieKeAzQSU2u
-        kispjmvR8Q6szS1LtdoyfCjas+wquZIuuBa9T+5QGXACtkwfjvYou0qupBOuRMc7pQ/6SXXMUsgL7b/0
-        0fw5Ba3e/plM2iK7Sq6kG65Ex1Nqiy7Ml5fG2zK+DZlEgpfY4+X6u3z0wE095dYcFsvHAJwtnkQTi+wq
-        uZKOuBIdM9X+8VCXwLK4oZDVLVhqTKj54OlOtHphrsyLx0MwEGNAVUPKSG6IRnaVXElXIoqOe91YnhdL
-        AAVnfJkkgqVl3mHe98k9dtTamD2HqbKYF4+HYCCTLexUwY3sKrmSzkQUHbXwzFP8i+BJhsci7Fj3iYWA
-        6BiJnziunAXwryqJ2XNu185KJcLJrpIr6U5E0ZG5H7sty78KJtfqaMIvuiifDvzJYBmJx2033GM3C+ml
-        M61kxyKGGGPYo5Ir6U9Y0ZHxUaNjsTgs74omPPrrGJxzLtzXnkCacwuaZO3x21b2oV/8d5WsdWXbV1HS
-        hYg1OjI+am0Ij/66bZ/2CBbpwzz8cAveKUq6EFF0RVHSHxVdUTIAFV1RMgAVXVEyABVdUTIAFV1RMgAV
-        XVEyABVdUTIAFV1RMgAVXVEyABVdUdo9Q+j/AZe2pfE27JbNAAAAAElFTkSuQmCC
-</value>
-  </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>326, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>46</value>
   </metadata>
